ftw/envoy-config.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http_protocol_options:
                  # accept_http_10 handles pre-HTTP/1.1 traffics for CRS regression tests against legacy HTTP versions
                  accept_http_10: true
                route_config:
                  virtual_hosts:
                    - name: local_route
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_server
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "coraza-filter"
                        root_id: ""
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          # NB: inline rules order matter. Some ftw-config rules override the coraza-recommended default ones.
                          value: |
                            {
                              "rulesets": [{
                                  "rules": [
                                    "Include @recommended-conf",
                                    "Include @ftw-conf",
                                    "Include @crs-setup-conf",
                                    "Include @owasp_crs/*.conf"
                                  ],
                                  "authority": "foo"
                                },
                                {
                                  "rules": [
                                    "Include @recommended-conf",
                                    "Include @ftw-conf",
                                    "Include @crs-setup-conf",
                                    "Include @owasp_crs/*.conf"
                                  ],
                                  "authority": "bar"
                                }
                              ]
                            }
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          vm_id: "my_vm_id"
                          code:
                            local:
                              filename: "build/main.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: local_server
      connect_timeout: 6000s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: local_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 8080
